--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 		    <artifactId>spring-boot-starter-activemq</artifactId>
 		</dependency>
 				
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.4</version>
+		</dependency>
 
 	</dependencies>
 
