--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 my.datasource.driver-class-name=com.mysql.jdbc.Driver
 my.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8
 my.datasource.username=root
-my.datasource.password=Aa2020623
+my.datasource.password=root
 
 
 my.datasource.max-active=100
