--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,14 @@
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.4</version>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.apache.zookeeper</groupId>
+		    <artifactId>zookeeper</artifactId>
+		    <version>3.4.10</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
