--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 		    <version>3.4.10</version>
 		</dependency>
 		
+		<dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+		
 		
 	</dependencies>
 
