--- a/src/main/resources/activemq.properties
+++ b/src/main/resources/activemq.properties
@@ -1,3 +1,4 @@
 spring.activemq.userName=admin
 spring.activemq.passworld=admin
 spring.activemq.broker-url=failover:tcp://localhost:61616
+#spring.activemq.broker-url=failover:(tcp://localhost:51511,tcp://localhost:51512,tcp://localhost:51513)
