新增logback日志配置

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 server.servlet.context-path=/
+logging.config=src/main/resources/logback.xml
+
 
 hibernate.hbm2ddl.auto=update
 hibernate.show-sql=true
